--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
         }
 
         /*contact*/
+        .contact{
+            position: relative;
+        }
         .contact-container{
             display: inline-flex;
             justify-content: space-between;
@@ -346,7 +349,7 @@
             border-radius: 50px;
             position: absolute;
             left: 10%;
-            top: 775%;
+            top: 10%;
         }
         .social-media-container div{
             display: flex;
@@ -545,7 +548,7 @@
     </section>
 </main>
 
-<main>
+<!--<main>
     <section class="gallery">
         <h3 class="topic-section" id="gallery">My <span>Gallery</span></h3>
 
@@ -557,6 +560,8 @@
             <div class="column">
                 <img src="assets/images/image2.png"/>
                 <img src="assets/images/image1.png"/>
+                <img src="assets/images/image3.jpg"/>
+
             </div>
             <div class="column">
                 <img src="assets/images/image2.png"/>
@@ -565,7 +570,7 @@
 
         </div>
     </section>
-</main>
+</main>-->
 
 <main>
     <section class="contact">
