--- a/index.html
+++ b/index.html
@@ -170,7 +170,6 @@
                 <img src="assets/images/assignment-image.png"/>
                 <h4>Assignment 2</h4>
             </div>
-
         </div>
     </section>
 </main>
@@ -206,11 +205,10 @@
             <div class="social-media-container">
                 <div><i class="fa-duotone fa-phone-volume"></i><h5>+94714666422</h5></div>
                 <div><i class="fa-regular fa-at" style="color: #FF014F;"></i><h5>anukidilara002@gmail.com</h5></div>
-                <div><i class="fa-light fa-map-location-dot"></i><h5>'Sanila',Mapalana,Kamburupitiya</h5></div>
+                <div><i class="fa-light fa-map-location-dot"></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
             <div class="message-section">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
-
                     <input type="text" id="name" placeholder="Your name"><br>
                     <input type="email" id="email" placeholder="Your email"><br>
                     <textarea id="message" cols="50" rows="10"></textarea><br>
