--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#assignments">Assignments</a></li>
             <li><a href="#gallery">Gallery</a></li>
             <li><a HREF="#contact">Contact</a></li>
         </ul>
