--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
            <p>
                I am trying to be a front end developer.
            </p>
-
-
            <div class="social-media">
                <a href="https://www.linkedin.com/in/anuki-dilara-2a2b2a228" target="_blank">
                    <i class="fa-brands fa-linkedin" style="color: #FF014F;"></i>
@@ -56,8 +54,6 @@
                </a>
            </div>
        </div>
-
-
        <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
    </section>
 </main>
@@ -66,56 +62,64 @@
     <section class="about"  >
         <h3 class="topic-section" id="about">About <span>Me</span></h3>
         <div class="about-container">
-            <img src="assets/images/aboutImage.png" alt="anuki">
+            <div id=#about-image>
+                <img src="assets/images/aboutImage.png" alt="anuki">
+            </div>
+
                 <p>
                     I am Anuki Dilara. I am UI/UX designer.I’m currently studying Graduate Diploma in Software Engineering (GDSE) in Institute of Software Engineering (IJSE). I,m currently working on Web Designing.
                     And I strives to build immersive and beautiful web applications through carefully crafted code and user-centric design.
                 </p>
+            <button>Download CV</button>
         </div>
-        <button>Download CV</button>
+
     </section>
 </main>
 
 <main>
     <section class="journey">
-       <h4 class="journey-topic">My Journey</h4>
-        <div class="journey-container">
-            <div>
-                <h5>2006 - 2012</h5>
-                <p>
-                    1-5 Grade- MR/Rathanajothi Vidyalaya
-                </p>
-            </div>
+        <h4 class="journey-topic">My Journey</h4>
+        <div class="journey-container-box">
+            <div class="journey-container">
+                <div>
+                    <h5>2006 - 2012</h5>
+                    <p>
+                        1-5 Grade- MR/Rathanajothi Vidyalaya
+                    </p>
+                </div>
 
-            <div><h5>2013 - 2018</h5>
-                <p>
-                    G.C.E  Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara
-                </p>
-            </div>
+                <div><h5>2013 - 2018</h5>
+                    <p>
+                        G.C.E  Ordinary Level - Mahinda Rajapaksha Vidyalaya Matara
+                    </p>
+                </div>
 
-            <div>
-                <h5>2019 - 2021</h5>
-                <p>
-                    G.C.E  Advanced Level - Mahinda Rajapaksha Vidyalaya Matara
-                </p>
-            </div>
+                <div>
+                    <h5>2019 - 2021</h5>
+                    <p>
+                        G.C.E  Advanced Level - Mahinda Rajapaksha Vidyalaya Matara
+                    </p>
+                </div>
 
-            <div>
-                <h5>2022 - 2024</h5>
-                <p>
-                    Graduated Diploma in IJSE
-                </p>
+                <div>
+                    <h5>2022 - 2024</h5>
+                    <p>
+                        Graduated Diploma in IJSE
+                    </p>
+                </div>
+            </div>
+            <h4 class="skills-topic">Skills</h4>
+            <div class="skills-container">
+                <img src="assets/images/skills/sql.png"/>
+                <img src="assets/images/skills/Python-logo-notext.svg.png"/>
+                <img src="assets/images/skills/JavaScript-logo.png"/>
+                <img src="assets/images/skills/java-logo.png"/>
+                <img src="assets/images/skills/ISO_C++_Logo.svg.png"/>
+                <img src="assets/images/skills/HTML5_logo_and_wordmark.svg.png"/>
+                <img src="assets/images/skills/css-logo.png" />
             </div>
         </div>
-        <h4 class="skills-topic">Skills</h4>
-        <div class="skills-container">
-            <img src="assets/images/skills/sql.png"/>
-            <img src="assets/images/skills/Python-logo-notext.svg.png"/>
-            <img src="assets/images/skills/JavaScript-logo.png"/>
-            <img src="assets/images/skills/java-logo.png"/>
-            <img src="assets/images/skills/ISO_C++_Logo.svg.png"/>
-            <img src="assets/images/skills/HTML5_logo_and_wordmark.svg.png"/>
-            <img src="assets/images/skills/css-logo.png" /></div>
+
     </section>
 </main>
 
@@ -123,14 +127,23 @@
     <section class="services">
         <h3 class="topic-section" id="services">My <span>Services</span></h3>
         <div class="services-list">
-            <div><i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i><h4>Web Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias aliquid, commodi consequatur cupiditate dolorem eligendi nobis perferendis qui, rem sint temporibus tenetur vero? Accusamus ea eius facere in laudantium!</p>
+            <div class="service-box">
+                <div class="front">
+                    <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
+                    <h4>Graphic Design</h4>
+                    <p>Develop the visual identity of your business</p>
+                </div>
+                <div class="back">
+                    <h4>Graphic Design</h4>
+                    <p>Develop the visual identity of your business</p>
+                </div>
             </div>
-            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>UI/UX Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A amet architecto aspernatur cumque deleniti dolorem dolores, enim facilis iure molestias necessitatibus, nulla numquam odio odit officia, quaerat quisquam repellendus voluptas!</p>
+
+            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Web Design</h4>
+                <p>Connect with your users, Not just your Business</p>
             </div>
-            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Graphic Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad adipisci autem delectus dignissimos eligendi, enim facere inventore labore libero maiores natus necessitatibus officiis pariatur, perferendis quia ratione soluta. Nisi!</p>
+            <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Development</h4>
+                <p>Web develop the visual identity of your business</p>
             </div>
         </div>
     </section>
@@ -163,15 +176,37 @@
     <section class="assignments">
         <h3 class="topic-section" id="assignments">My <span>Assignments</span></h3>
         <div class="assignment-container">
-            <div>
+            <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
-                <h4>Assignment 1</h4>
+                <div class="assigment-layer">
+                    <h4>Assignment 1</h4>
+                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-01/index.html?_ijt=rbi9tmg4fekodsqfd558h5h7ab&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
             </div>
-            <div>
+            <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
-                <h4>Assignment 2</h4>
+                <div class="assigment-layer">
+                    <h4>Assignment 2</h4>
+                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-02/index.html?_ijt=vpbf21dkon8802jeh337p2ls5u&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
+            </div>
+            <div class="assignment-card">
+                <img src="assets/images/assignment-image.png"/>
+                <div class="assigment-layer">
+                    <h4>Assignment 3</h4>
+                    <a href="http://localhost:63342/My-portfolio/My%20portfolio/assignments/CSS/Cases/CASE-03/index.html?_ijt=vpbf21dkon8802jeh337p2ls5u&_ij_reload=RELOAD_ON_SAVE" target="_blank">
+                        <img src="assets/images/icons/expand-arrows.png">
+                    </a>
+                </div>
             </div>
         </div>
+        <a href="assignments.html">
+            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+        </a>
     </section>
 </main>
 
