--- a/index.html
+++ b/index.html
@@ -127,17 +127,32 @@
     <section class="services">
         <h3 class="topic-section" id="services">My <span>Services</span></h3>
         <div class="services-list">
-            <div class="service-box">
-                <div class="front">
-                    <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
-                    <h4>Graphic Design</h4>
-                    <p>Develop the visual identity of your business</p>
-                </div>
-                <div class="back">
-                    <h4>Graphic Design</h4>
-                    <p>Develop the visual identity of your business</p>
+        <!--    <div class="service-card">
+                <div class="service-card-content">
+                    <div class="card-front">
+                        <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
+                        <h4 class="service-title">Graphic Design</h4>
+                        <p>Develop the visual identity of your business</p>
+                    </div>
+                    &lt;!&ndash;<div class="card-back">
+                        <h4>Graphic Design</h4>
+                        <p>Develop the visual identity of your business</p>
+                    </div>&ndash;&gt;
                 </div>
             </div>
+            <div class="service-card">
+                <div class="service-card-content">
+                    <div class="card-front">
+                        <i class="fa-solid fa-laptop-code" style="color: #ffffff;"></i>
+                        <h4 class="service-title">Graphic Design</h4>
+                        <p>Develop the visual identity of your business</p>
+                    </div>
+                    &lt;!&ndash;<div class="card-back">
+                        <h4>Graphic Design</h4>
+                        <p>Develop the visual identity of your business</p>
+                    </div>&ndash;&gt;
+                </div>
+            </div>-->
 
             <div><i class="fa-solid fa-desktop" style="color: #ffffff;"></i><h4>Web Design</h4>
                 <p>Connect with your users, Not just your Business</p>
