--- a/index.html
+++ b/index.html
@@ -254,9 +254,9 @@
         <h3 class="topic-section" id="contact">Contact <span>Me</span></h3>
         <div class="contact-container">
             <div class="social-media-container">
-                <div><i class="fa-duotone fa-phone-volume"></i><h5>+94714666422</h5></div>
-                <div><i class="fa-regular fa-at" style="color: #FF014F;"></i><h5>anukidilara002@gmail.com</h5></div>
-                <div><i class="fa-light fa-map-location-dot"></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
+                <div><img src="assets/images/icons/telephone%20(1).png"><h5>+94714666422</h5></div>
+                <div><img src="assets/images/icons/email%20(2).png"><h5>anukidilara002@gmail.com</h5></div>
+                <div><img src="assets/images/icons/location%20(1).png"></i><h5>'Sanila',Mapalana,<br>Kamburupitiya</h5></div>
             </div>
             <div class="message-section">
                 <form action="anukidilara002@gmail.com" target="_blank" method="post">
