--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
         </div>
     </section>
 </main>
-<hr>
-<footer>
-    <center>Anuki Dilara<i class="fa-thin fa-heart"></i></center>
+
+<footer class="footer">
+    <center>Anuki Dilara</center>
 </footer>
 </body>
 </html>
