--- a/index.html
+++ b/index.html
@@ -26,38 +26,45 @@
 </header>
 
 <main>
-   <section class="home">
-       <img src="assets/images/homeImage2.png" alt="anuki dilara" >
-       <div class="home-container">
-           <div class="headings">
-               <h3>Hello!</h3>
-               <h1>I am Anuki Dilara</h1>
-           </div>
-           <p>
-               I am trying to be a front end developer.
-           </p>
-           <div class="social-media">
-               <a href="https://www.linkedin.com/in/anuki-dilara-2a2b2a228" target="_blank">
-                   <i class="fa-brands fa-linkedin" style="color: #FF014F;"></i>
-               </a>
+    <section class="home">
+        <div class="home-container">
+            <div class="shadow-border"></div>
+            <div class="headings">
+                <h1>My Self,<br><span>Anuki Dilara</span></h1>
+            </div>
+            <p>
+                I am trying to be a front end developer.
+            </p>
 
-               <a href="https://www.instagram.com/anu_dil__/" target="_blank">
-                   <i class="fa-brands fa-instagram" style="color: #FF014F;"></i>
-               </a>
+            <div class="home-image">
+                <img src="assets/images/homeImage2.png" alt="anuki dilara" >
+            </div>
 
-               <a href="https://web.telegram.org/k/" target="_blank">
-                   <i class="fa-brands fa-telegram" style="color: #FF014F;"></i>
-               </a>
+            <div class="social-media">
+                <a href="https://www.linkedin.com/in/anuki-dilara-2a2b2a228" target="_blank">
+                    <i class="fa-brands fa-linkedin" style="color: #FF014F;"></i>
+                </a>
 
-               <a href="https://github.com/Anuki-Dilara" target="_blank">
-                   <i class="fa-brands fa-github" style="color: #FF014F;"></i>
-               </a>
-           </div>
-       </div>
-       <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
-   </section>
+                <a href="https://www.instagram.com/anu_dil__/" target="_blank">
+                    <i class="fa-brands fa-instagram" style="color: #FF014F;"></i>
+                </a>
+
+                <a href="https://web.telegram.org/k/" target="_blank">
+                    <i class="fa-brands fa-telegram" style="color: #FF014F;"></i>
+                </a>
+
+                <a href="https://github.com/Anuki-Dilara" target="_blank">
+                    <i class="fa-brands fa-github" style="color: #FF014F;"></i>
+                </a>
+            </div>
+            <div class="status">
+                <h3>I am a<br><span>Front-End<br>Developer</span></h3>
+            </div>
+            <div class="line"></div>
+        </div>
+        <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
+    </section>
 </main>
-
 <main>
     <section class="about"  >
         <h3 class="topic-section" id="about">About <span>Me</span></h3>
