--- a/index.html
+++ b/index.html
@@ -66,8 +66,12 @@
     </section>
 </main>
 <main>
-    <section class="about"  >
-        <h3 class="topic-section" id="about">About <span>Me</span></h3>
+    <section class="about">
+        <div class="shadow-topic">
+            <h1>About</h1>
+            <h3 class="topic-section" id="about">About <span>Me</span></h3>
+        </div>
+
         <div class="about-container">
             <div id=#about-image>
                 <img src="assets/images/aboutImage.png" alt="anuki">
@@ -132,7 +136,10 @@
 
 <main>
     <section class="services">
-        <h3 class="topic-section" id="services">My <span>Services</span></h3>
+        <div class="shadow-topic">
+            <h1>Services</h1>
+            <h3 class="topic-section" id="services">My <span>Services</span></h3>
+        </div>
         <div class="services-list">
         <!--    <div class="service-card">
                 <div class="service-card-content">
@@ -173,7 +180,11 @@
 
 <main>
     <section class="projects">
-        <h3 class="topic-section" id="projects">My <span>Projects</span></h3>
+        <div class="shadow-topic">
+            <h1>Projects</h1>
+            <h3 class="topic-section" id="projects">My <span>Projects</span></h3>
+        </div>
+
         <div class="projects-list">
             <div>
                 <h4>Pharmacy Management System</h4>
@@ -196,7 +207,10 @@
 
 <main>
     <section class="assignments">
-        <h3 class="topic-section" id="assignments">My <span>Assignments</span></h3>
+        <div class="shadow-topic">
+            <h1>Assignments</h1>
+            <h3 class="topic-section" id="assignments">My <span>Assignments</span></h3>
+        </div>
         <div class="assignment-container">
             <div class="assignment-card">
                 <img src="assets/images/assignment-image.png"/>
@@ -258,7 +272,10 @@
 
 <main>
     <section class="contact">
-        <h3 class="topic-section" id="contact">Contact <span>Me</span></h3>
+        <div class="shadow-topic">
+            <h1>Contact</h1>
+            <h3 class="topic-section" id="contact">Contact <span>Me</span></h3>
+        </div>
         <div class="contact-container">
             <div class="social-media-container">
                 <div><img src="assets/images/icons/telephone%20(1).png"><h5>+94714666422</h5></div>
