--- a/index.html
+++ b/index.html
@@ -62,10 +62,13 @@
             </div>
             <div class="line"></div>
         </div>
-        <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
+        <div class="up-arrow">
+            <a href="index.html"><i class="fa-solid fa-circle-up" style="color: #FF014F;"></i></a>
+        </div>
+
     </section>
-</main>
-<main>
+
+
     <section class="about">
         <div class="shadow-topic">
             <h1>About</h1>
@@ -85,9 +88,7 @@
         </div>
 
     </section>
-</main>
 
-<main>
     <section class="journey">
         <h4 class="journey-topic">My Journey</h4>
         <div class="journey-container-box">
@@ -132,9 +133,7 @@
         </div>
 
     </section>
-</main>
 
-<main>
     <section class="services">
         <div class="shadow-topic">
             <h1>Services</h1>
@@ -176,36 +175,37 @@
             </div>
         </div>
     </section>
-</main>
 
-<main>
     <section class="projects">
         <div class="shadow-topic">
             <h1>Projects</h1>
             <h3 class="topic-section" id="projects">My <span>Projects</span></h3>
         </div>
-
-        <div class="projects-list">
-            <div>
+        <div class="project-container">
+            <div class="project-card">
                 <h4>Pharmacy Management System</h4>
-                <img src="assets/images/project1.png">
+                <img src="assets/images/Ag1_09.jpg">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
             </div>
-            <div>
+            <div class="project-card">
                 <h4>Connect Four Game</h4>
-                <img src="assets/images/4%20in%20row%202.PNG">
+                <img src="assets/images/Ag1_09.jpg">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
+
             </div>
-            <div>
+            <div class="project-card">
                 <h4>Hostel Management System</h4>
-                <img src="assets/images/projectd24.png">
+                <img src="assets/images/Ag1_09.jpg">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium iste molestiae nam, odit placeat porro quam sequi! Enim illo porro praesentium sunt vel! A at ducimus est, labore rerum ut.</p>
             </div>
         </div>
-        <a href="projects.html">
-            <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
-        </a>
+        <div class="more-arrow">
+            <a href="projects.html">
+                <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
+            </a>
+        </div>
     </section>
-</main>
 
-<main>
     <section class="assignments">
         <div class="shadow-topic">
             <h1>Assignments</h1>
@@ -244,7 +244,7 @@
             <i class="fa-solid fa-circle-arrow-right" style="color: white;"></i>
         </a>
     </section>
-</main>
+
 
 <!--<main>
     <section class="gallery">
@@ -270,7 +270,7 @@
     </section>
 </main>-->
 
-<main>
+
     <section class="contact">
         <div class="shadow-topic">
             <h1>Contact</h1>
@@ -292,10 +292,12 @@
             </div>
         </div>
     </section>
+
+    <!--<footer class="footer">
+        <center>Anuki Dilara</center>
+    </footer>-->
 </main>
 
-<footer class="footer">
-    <center>Anuki Dilara</center>
-</footer>
+
 </body>
 </html>
